# alx-low_level_programming

0x00-hello_world/: 4-puts.c  README.md
0x01-variables_if_else_while/: .0-positive_or_negative.c.swp  0-positive_negative.c  0-positive_or_negative.c  8-print_base16.c  README.md
0x02-functions_nested_loops/: README.md
0x03-debugging/: README.md
0x05-pointers_arrays_strings/: README.md
0x06-pointers_arrays_strings/: README.md
0x07-pointers_arrays_strings/: .3-strspn.c.swp  1-memcpy.c  README.md
0x08-recursion/: .0-puts_recursion.c.swp  .swp  README.md
0x09-static_libraries/: .1-strncat.c.swp  0-memset.c  1-isdigit.c  2-strncpy.c  3-islower.c  3-puts.c  3-strcmp.c  4-isalpha.c  6-abs.c  9-strcpy.c  README.md
0x0A-argc_argv/: README.md
0x0B-malloc_free/: .0-create_array.c.swp  1-strdup.c  README.md
0x0C-more_malloc_free/: README.md
0x0D-preprocessor/: README.md
0x0E-structures_typedef/: README.md
0x0F-function_pointers/: .swp
0x12-singly_linked_lists/: README.md
0x13-more_singly_linked_lists/: README.md
0x14-bit_manipulation/: .swp
0x1E-search_algorithms/: CMakeLists.txt
